--- a/css/all.css
+++ b/css/all.css
@@ -1,8 +1,8 @@
 /*base*/
-@import url('./_variable.css');
+@import url('./css/_variable.css');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
-@import url('./_font.css');
-@import url('./_button.css');
+@import url('./css/_font.css');
+@import url('./css/_button.css');
 
 /*page*/
-@import url('./_index.css');
+@import url('./css/_index.css');
