--- a/css/all.css
+++ b/css/all.css
@@ -1,8 +1,8 @@
 /*base*/
-@import url("./css/variable.css");
+@import url("variable.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
-@import url("./css/font.css");
-@import url("./css/button.css");
+@import url("font.css");
+@import url("button.css");
 
 /*page*/
-@import url("./css/index.css");
+@import url("index.css");
