修改新增任務按鈕也會被收上去狀況

--- a/view/index.html
+++ b/view/index.html
@@ -66,18 +66,18 @@
                 </tr>
               </thead>
               <tbody class="collapse show" id="todo">
+              </tbody>
+              <tfoot>
                 <tr>
                   <td colspan="2">
-                    <button class="btn btn-primary fs-5 w-100" data-bs-toggle="modal"
-                      data-bs-target="#addNewTask">新增任務
+                    <button class="btn btn-primary fs-5 w-100" data-bs-toggle="modal" data-bs-target="#addNewTask">新增任務
                       <i class="bi bi-plus-lg"></i>
                     </button>
                   </td>
                 </tr>
-              </tbody>
+              </tfoot>
             </table>
-            <div class="modal fade" id="addNewTask" tabindex="-1" aria-labelledby="addNewTask"
-              aria-hidden="true">
+            <div class="modal fade" id="addNewTask" tabindex="-1" aria-labelledby="addNewTask" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
